--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
         "./css/inject.css",
         "./css/message.css"
       ],
-      "run_at": "document_start"
+      "run_at": "document_end"
     }
   ],
   "icons": {
