--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
-  "name": "Screenshots",
-  "version": "0.1.0",
-  "description": "Take screenshots",
+  "name": "Screener",
+  "version": "0.1.3",
+  "description": "Take screenshots and get text from picture",
   "manifest_version": 3,
   "action": {
     "default_title": "Take a Screenshot"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type"          : "module"
   },
   "permissions": [
     "desktopCapture",
@@ -22,8 +23,7 @@
     {
       "matches": ["<all_urls>"],
       "js": [
-        "./api/http.js",
-        "./api/ocr.js",
+        "tag.js",
         "message.js",
         "content_script.js"
       ],
