--- a/manifest.json
+++ b/manifest.json
@@ -16,8 +16,7 @@
     "activeTab",
     "clipboardWrite",
     "clipboardRead",
-    "webRequest",
-    "<all_urls>"
+    "webRequest"
   ],
   "content_scripts": [
     {
@@ -32,7 +31,7 @@
         "./css/inject.css",
         "./css/message.css"
       ],
-      "run_at": "document_end"
+      "run_at": "document_start"
     }
   ],
   "icons": {
