--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Screener",
+  "name": "Screener（测试版）",
   "version": "0.1.3",
-  "description": "Take screenshots and get text from picture",
+  "description": "Take screenshots and get text from picture（测试版）",
   "manifest_version": 3,
   "action": {
-    "default_title": "Take a Screenshot"
+    "default_title": "Take a Screenshot （测试版）"
   },
   "background": {
     "service_worker": "background.js",
