--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,38 @@
 {
-  "name": "Screener（测试版）",
-  "version": "0.1.3",
-  "description": "Take screenshots and get text from picture（测试版）",
+  "name": "extra-html-content",
+  "version": "0.1.0",
+  "description": "extra content",
   "manifest_version": 3,
   "action": {
-    "default_title": "Take a Screenshot （测试版）"
+    "default_title": "extra content",
+    "default_popup": "popup.html"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'",
+    "sandbox": "sandbox allow-scripts; default-src 'self'; object-src 'self'"
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "MacCtrl+Shift+F"
+      },
+      "description": "Opens popup.html"
+    }
   },
   "background": {
-    "service_worker": "background.js",
-    "type"          : "module"
+    "service_worker": "background.js"
   },
+  "content_scripts": [
+      {
+          "matches": [
+              "<all_urls>"
+          ],
+          "js": [
+              "content_script.js"
+          ]
+      }
+  ],
   "permissions": [
     "desktopCapture",
     "tabs",
@@ -17,22 +40,6 @@
     "clipboardWrite",
     "clipboardRead",
     "webRequest"
-  ],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": [
-        "tag.js",
-        "message.js",
-        "content_script.js"
-      ],
-      "css": [
-        "./css/font.css",
-        "./css/inject.css",
-        "./css/message.css"
-      ],
-      "run_at": "document_start"
-    }
   ],
   "icons": {
     "16": "/assets/icon-16.png",
